Refactored, added domain constraints, fixmes for Mario